# kosh

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  _config.yml  compose.override.yml  compose.yml  docker-compose.host.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  index.md  kosh.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
_layouts/: default.html
_sass/: overrides.scss
assets/css/: style.scss
docs/: apis.md  deployment.md  sync.md
docs/implementations/: c-salt_sanskrit.md  cdsd.md  freedict.md  index.md  kosh_data.md
kosh/: kosh.py  utils.py
kosh/api/: _api.py  graphql.py  restful.py  xquery.py
kosh/elastic/: entry.py  index.py  kosh.code-workspace  query.py  search.py
kosh/info/: _api.py  info.py
kosh/param/: _param.py  api_port.py  api_root.py  config_file.py  config_text.py  data_host.py  data_pool.py  data_root.py  data_sync.py  help.py  log_file.py  log_level.py
kosh/params/: _param.py  config.py  config_file.py  data_host.py  data_root.py  data_sync.py  help.py  log_level.py
kosh/temp/: elastic_graphene_mapping.json  elastic_sample_mapping.json
kosh/utility/: concretemethod.py  defaultconfig.py  dotdictionary.py  instance.py  logger.py
scripts/: init_index.py
scripts/ae/: index_ae.py
scripts/elastic/: index_tei.py
scripts/pwg/: index_pwg.py
scripts/transform/: split_mw72.py  split_pwg.py  transform_ap90.py  transform_gra.py
scripts/webhook/: github_listener.py  reindex.py
src/aptestud/: index_aptestud.py
utils/: slp1_romanpms.xml
(+45 files in other folders)
